# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2013  Vasco Nunes, Piotr Ożarowski


2013-10-04  Michael Jahn
	* FilmeAffinity movie plugin updated
	  [#1210828] FilmAffinity
	  [#1216572] [FilmAffinity plugin] doesn't show the list of movies

2013-09-27  Michael Jahn
	* FilmeVonAZ movie plugin updated

2013-06-26  Michael Jahn
	* [1194709] DVDEmpire plugin stopped returning results

2013-06-24  Michael Jahn
	* [1174569] FilmAffinity plugin does not work since today

2013-06-01  Michael Jahn
	* PDF export plugin updated
	
2013-05-24  Michael Jahn
	* Allocine movie plugin updated

2013-04-02  Michael Jahn
	* [1039068] Return the list of films sorted; added sorting by title for result lists

2013-02-21  Michael Jahn
	* IMDb and Cinemovies movies plugin updated

2013-01-30  Michael Jahn
	* FilmeVonAZ and OFDb movie plugins updated

2013-01-28  Michael Jahn
	* Kino.de and Cineteka movie plugins updated

2012-12-29  Michael Jahn
	* remove movie plugin FilmDb (site doesn't exists anymore)

2012-12-16  Michael Jahn
	* fixed backup for databases other than sqlite

2012-12-06  Michael Jahn
	* fixed IMDb plugins for direct search results

2012-11-29  Michael Jahn
	* [1084608] IMDB does not work from November 28, 2012; fixed IMDb plugins

2012-11-20  Michael Jahn
	* fixed Allocine plugin [663709]
	
2012-08-30  Michael Jahn
	* [1043263] importing GriffithXML fails: posters are not added

2012-08-29  Michael Jahn
	* [1037249] typo in tellico spelling
	
2012-07-03  Michael Jahn
	* DVD Palace movie plugin updated
	
2012-06-09  Michael Jahn
	* DVD Palace movie plugin updated

2012-06-07  Michael Jahn
	* [#1010073] The MoviePosterDB seems to have quit working properly.

2012-04-10  Vasco Nunes
	* [#669431] Spell checker doesn't work

2012-04-02  Michael Jahn
	* fixed Allocine plugin (V3 API) (thanks to CinéphOli)

2012-01-29  Michael Jahn
	* [#923416] Connection failed. (Amazon plugin)
	* [#913299] importing covers gives list index out of range